# Sensible-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blockCell.h  door.h  drawing.h  enemy.h  gameObject.h  install.sh  keys.h  main.cpp  sq1  templateObject.h  user.h  wallCell.h
assets/: untitled.dae  uvmap.DDS
assets/shaders/: lighting.f.glsl  lighting.v.glsl  multiLight.f.glsl  multiLight.v.glsl  normal.v.glsl  passthru.v.glsl
include/: BaseProvider.h  File.h  Pnt.h  SEMap.h  SEVector.h  String.h  XMLReader.h  camera.h  console.h  matrix.h  point.h  pointbase.h  vector.h
include/Camera/: Camera.h  FreeCamera.h  TankCamera.h  arcCamera.h  baseCamera.h  fpCamera.h
include/RenderObject/: BasicObject.h  ConsoleObject.h  LineGraph.h  MultiTexObject.h  Object.h  ObjectProvider.h  PassthruObject.h
include/Renderer/: Fonts.h  Lighting.h  Loader.h  OpenGL.h  SDL.h  Shader.h  Skybox.h  Textures.h
include/Renderer/FFP/: FFPGL.h  Lighting.h
include/Scene/: BaseScene.h  Bench.h  FontsScene.h  Lighting.h  Multisample.h  ShaderScene.h  Texture2D.h  template
include/Shaders/: GLShader.h  Light.h  ShaderProvider.h
include/Texture/: FontTexture.h  SDLTexture.h  TextureProvider.h  Textures.h
include/Texture/FFP/: FFPTexture.h
include/Texture/Images/: ImageProvder.h
include/Texture/Images/Reader/: FreeImageReader.h  ImageReader.h  SDLImageReader.h  SEImageReader.h
include/Texture/Text/: FontFamily.h  FontProvider.h  SDLFontTexture.h
include/Timer/: SDLTimer.h  Timer.h  TimerProvider.h
include/Windows/: BenchWindow.h  CoreWindow.h  LightingWindow.h  RenderWindow.h  SDLWindow.h  ShaderWindow.h  template
include/Windows/FFP/: BenchWindow.h  FFPWindow.h  FontsWindow.h  LightWindow.h  MutliSampleWindow.h
lib/freeimage/: freeimage-config.cmake
lib/freetype/: freetype-config.cmake
lib/glew/: .gitignore
lib/glut/: .gitignore
lib/sdl2/: .gitignore  sdl2-config.cmake
shaderCompiler/: CmakeLists.txt  main.cpp
src/: camera.cpp  console.cpp  matrix.cpp  point.cpp  pointbase.cpp  vector.cpp
src/Camera/: Camera.cpp  TankCamera.cpp  arcCamera.cpp  baseCamera.cpp  fpCamera.cpp
